--- a/dev/scss/partials/_typography.scss
+++ b/dev/scss/partials/_typography.scss
@@ -37,7 +37,7 @@ h4 {
 }
 
 body {
-  line-height: 1.25;
+  line-height: 1.5;
   font-size: 18px;
 }
 
